# sentient_agent_factory

./: .gitignore  README.md  env.example  main.py  pyproject.toml  render.yaml  test_simple.py
sentient_agent_factory/sentient-py-v1/: Dockerfile  env.example  init_database.py  main.py  test_apis.py
sentient_agent_factory/sentient-py-v1/src/agents/: character_agent.py
sentient_agent_factory/sentient-py-v1/src/api/routes/: chat.py  companion.py
sentient_agent_factory/sentient-py-v1/src/config/: settings.py
sentient_agent_factory/sentient-py-v1/src/models/: companion.py  message.py  user.py
sentient_agent_factory/sentient-py-v1/src/services/: auth.py
src/agents/: character_agent.py
src/api/routes/: auth.py  companion.py  upload.py
src/config/: database.py  settings.py
src/memory/: distributed_memory.py
src/models/: __init__.py
src/services/: auth.py  cloudinary.py  moderation.py  rate_limit.py
