[tool.poetry]
name = "sentient-py-v1"
version = "0.1.0"
description = "Sentient AI Backend - Python/LangGraph Rewrite"
authors = ["Your Team <team@sentient.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
langchain = "^0.3.4"
langgraph = "^0.2.18"
langchain-openai = "^0.2.5"
langchain-community = "^0.3.10"
langchain-core = "^0.3.15"
openai = "^1.51.0"
# SQLite for prototype (free!), PostgreSQL for production
aiosqlite = "^0.20.0"
psycopg2-binary = {version = "^2.9.9", optional = true}
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
pydantic = "^2.5.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
redis = {version = "^5.0.1", optional = true}
faiss-cpu = "^1.7.4"
numpy = "^1.26.2"
python-dotenv = "^1.0.0"
httpx = "^0.25.2"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.6.0"

[tool.poetry.extras]
postgresql = ["psycopg2-binary"]
redis = ["redis"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 